<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_start"
    android:orientation="vertical"
    tools:context=".MainMenuActivity">

    <LinearLayout
        android:id="@+id/mainSplash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <View
            android:id="@+id/my_line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="260dp"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/bodoni_moda_bold"
            android:gravity="center"
            android:letterSpacing="0.3"
            android:text="@string/a_m_company"
            android:textColor="#635356"
            android:textSize="20sp" />

        <View
            android:id="@+id/my_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/bc_button_start"
            android:letterSpacing="0.2"
            android:padding="15dp"
            android:text="@string/login"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/bc_button_start"
            android:letterSpacing="0.1"
            android:padding="17dp"
            android:text="@string/register"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>