<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_start"
    android:orientation="vertical"
    tools:context=".BasicOfDiet">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:elevation="8dp"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/background_of_metabolism"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dieta_podstawowa"
                        android:layout_marginTop="5dp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:letterSpacing="0.1"
                            android:paddingStart="5dp"
                            android:paddingEnd="10dp"
                            android:text="PPM:"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/TVOfPPM"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:letterSpacing="0.1"
                            android:paddingStart="5dp"
                            android:paddingEnd="10dp"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:letterSpacing="0.1"
                            android:paddingStart="5dp"
                            android:paddingEnd="10dp"
                            android:text="CPM:"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/TVOfCPM"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:letterSpacing="0.1"
                            android:paddingStart="5dp"
                            android:paddingEnd="10dp"
                            android:textSize="20sp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="35dp"
                        android:gravity="center"
                        android:background="@drawable/background_of_metabolism_context">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="20dp"
                            android:paddingBottom="20dp"
                            android:paddingStart="10dp"
                            android:text="@string/protein"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tvProteinValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="6dp"
                            android:textSize="20sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gram"
                            android:paddingStart="1dp"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="35dp"
                        android:gravity="center"
                        android:background="@drawable/background_of_metabolism_context">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="20dp"
                            android:paddingBottom="20dp"
                            android:paddingStart="10dp"
                            android:text="@string/fat"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tvFatValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:paddingLeft="6dp"
                            android:textSize="20sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gram"
                            android:paddingStart="1dp"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="35dp"
                        android:gravity="center"
                        android:background="@drawable/background_of_metabolism_context">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="20dp"
                            android:paddingBottom="20dp"
                            android:paddingStart="10dp"
                            android:text="@string/carbohydrates"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tvCarbohydratesValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:paddingStart="6dp"
                            android:textSize="20sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gram"
                            android:paddingStart="1dp"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_diet" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>

</LinearLayout>